package exp4;
//@Author：ranxing
//@Time：2022/10/13   8:57
//@File：Car.java

public class Car {
    private String wheel;
    private String oilBox;
    private String body;

    public void setWheel(String wheel) {
        this.wheel = wheel;
    }

    public void setOilBox(String oilBox) {
        this.oilBox = oilBox;
    }

    public void setBody(String body) {
        this.body = body;
    }

    public String getWheel() {
        return wheel;
    }

    public String getOilBox() {
        return oilBox;
    }

    public String getBody() {
        return body;
    }
}
